--- a/css/media.css
+++ b/css/media.css
@@ -79,7 +79,7 @@
         -moz-transition: all 0.7s;
         -ms-transition: all 0.7s;
         -o-transition: all 0.7s;
-        z-index:10;
+        z-index: 10;
     }
 
     .menu-active {
@@ -439,7 +439,7 @@
     /* * Header Bottom * */
     /* ? Left ? */
     .mobile:last-child {
-        margin: 0.5rem 0 0 4rem;
+        margin: 0.5rem 0 0 0;
     }
 
     .header-left__action {
@@ -470,7 +470,7 @@
     }
 
     .main-app__img {
-        max-width: 19.9rem;
+        max-width: 19.5rem;
     }
 
     .main-app__text {
@@ -478,12 +478,14 @@
     }
 
     .main-findloc__btn {
+        font-size: 0.6rem;
         padding: 1rem 0.5rem;
     }
 
     /* ? Footer ? */
     .footer {
         gap: 1rem;
+        padding-bottom: 2rem;
     }
 
     .about {
